# module3-web

./: .gitignore  Cargo.toml  README.md  requirements.md
blog-client/: build.rs
blog-server/: .gitignore  Cargo.toml  build.rs
blog-server/migrations/: 20250101000001_create_users.sql  20250101000002_create_posts.sql
blog-server/src/: main.rs  server.rs
blog-server/src/application/: auth_service.rs  blog_service.rs  mod.rs
blog-server/src/data/: blog_repository.rs  mod.rs  post_repository.rs  user_repository.rs
blog-server/src/domain/: error.rs  mod.rs  post.rs  user.rs
blog-server/src/infrastructure/: config.rs  database.rs  hash.rs  jwt.rs  logging.rs  mod.rs  security.rs
blog-server/src/presentation/: auth.rs  http_handlers.rs  middleware.rs  mod.rs
