[package]
name = "blog-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web="4.12"
actix-cors="0.7"
jsonwebtoken = { version = "10.2", features = ["rust_crypto"] }
tokio = { version = "1.49", features = ["macros", "rt-multi-thread"] }
sqlx= { version = "0.8" , features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
tonic="0.14"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
dotenvy = "0.15.7"
thiserror = "2.0"
argon2 = "0.5"
password-hash = "0.5"
uuid = { version = "1.18", features = ["v4"] }
chrono = "0.4"
serde_json = "1.0.148"